# synthetic-electricity-demand

./: LICENSE  README.md  data.py  demand_2022_utc.csv  gan.py  pyproject.toml  test.py
