[tool.poetry]
name = "synthetic-electricity-demand"
version = "0.1.0"
description = ""
authors = ["sstroemer <stefan.stroemer@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
torch = "^1.13.1"
numpy = "^1.24.2"
pandas = "^1.5.3"
holidays = "^0.20"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
